data/all_generated_tests/raw_wast_tests/br_if_TypeMismatchinControlFlowInstructions_1889.wast
;; 10. **Test Case 10**:     - **Description**: Configure an edge case where a `block` returns a composite type (e.g., `[i32, f64]`) and the `br_if` conditionally unwinds to this block providing incorrect operand types on the stack.     - **Constraint**: Ensures robust type enforcement and stack unwinding logic in complex scenarios where the composite return types and branching conditions are involved.

(assert_invalid
  (module (func (block (result i32 f64)
    (br_if 0 (i32.const 1) (i64.const 42) (f64.const 3.14))
  )))
  "type mismatch"
)